<!-- es fr ru zh fa tr pl ar uk vi ug sv sl ro ms lt ln ko ja it da cs km hy be -->
<resources>
    <string name="app_name">LockUp</string>
    <string name="version">Version</string>
    <string name="setup_button">Setup</string>
    <string name="footer">Defending your privacy</string>
    <string name="lockup_icon">LockUp Icon</string>
    <string name="preferences">Preferences</string>
    <string name="device_compromised">Device Compromised!</string>
    <string name="device_protected">LockUp Enabled</string>
    <string name="toggle_button"></string>
    <string name="language_title">Language</string>
    <string name="language_summary">Select the language to use for the interface</string>
    <string name="language_selected">The user interface will use %1$s for the language</string>
    <string name="keepUpdated_summary">Periodically update the signature database</string>
    <string name="keepUpdated_title">Keep up to date</string>
    <string name="pref_defenseMech">Defense Mechanisms</string>
    <string name="pref_triggerMech">Trigger Mechanisms</string>
    <string name="pref_appConfig">Application Configuration</string>
    <string name="notifyUser_summary">Enable or Disable Push Notifications</string>
    <string name="notifyUser_title">Push Notifications</string>
    <string name="improveLockUp_summary">Help improve the LockUp application</string>
    <string name="improveLockUp_title">Help Improve LockUp</string>
    <string name="detectForensics_summary">Trigger a response when a known forensic tool or exploit is detected</string>
    <string name="detectForensics_title">Block forensic techniques</string>
    <string name="deniabilityPw_default">LockUp</string> /* SHA256 LockUp */
    <string name="deniabilityPw_title">Plausible deniability password</string>
    <string name="deniabilityPw_dialogTitle">Plausible deniability password</string>
    <string name="deniabilityPw_summary">Click to change the plausible deniability password</string>
    <string name="plausible_summary">Trigger a response when a plausible deniability password is entered</string>
    <string name="plausible_title">Plausible deniability</string>
    <string name="runAtBoot_title">Start on boot</string>
    <string name="runAtBoot_default">Start defending as soon as the device loads the Android OS</string>
    <string name="runAtBoot_enabled">LockUp will start defending this device when the Android OS is loaded</string>
    <string name="enabled_for">LockUp will run for %1$s after enabling</string>
    <string name="timeEnabled_default">LockUp will run for Forever after enabling</string>
    <string name="timeEnabled_title">Enabled for</string>
    <string name="desiredResponse_title">Defend using</string>
    <string name="desiredResponse">LockUp will defend using a %1$s</string>
    <string name="desiredResponse_default">How should LockUp respond to events? The default is to factory reset the device</string>
    <string name="timePoweredOff_title">Required power</string>
    <string name="timePoweredOff">A event will be triggered on next boot if downtime exceeds %1$s</string>
    <string name="timePoweredOff_default">Trigger a response when the device downtime exceeds a given period of time</string>
    <string name="timeUnlocked_title">Required unlock</string>
    <string name="timeUnlocked">A event will be immediately triggered if no login occurs every %1$s</string>
    <string name="timeUnlocked_default">Trigger a response when the device has not been unlocked within a given period of time</string>
    <string name="lockupEnabled">LockUp Enabled</string>
    <string name="lockupDisabled">LockUp Disabled</string>
    <string name="deviceAdminMsg">LockUp Uses this policy to lock and wipe the device when events are triggered.</string>
    <string name="notifyChannelDesc">LockUp Application</string>
    <string name="defenseMsg">Warning! A malicious event has been detected.</string>
    <string name="defenseError">ERROR! Caught an exception while trying to protect the device. Failing open :(</string>
    <string name="defensePriv">ERROR! LockUp does not have the right privileges. Failing open :(</string>
    <string name="uninstallMsg">Thank you for choosing LockUp. Please come back again!</string>
</resources>
