<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="100pt"
    android:layout_width="100pt">

    <PreferenceCategory android:title="@string/pref_triggerMech">

        <EditTextPreference
            android:defaultValue=""
            android:enabled="false"
            android:id="@+id/deniabilityPw"
            android:dialogTitle="@string/deniabilityPw_dialogTitle"
            android:key="deniabilityPw"
            android:summary="@string/deniabilityPw_summary"
            android:title="@string/deniabilityPw_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:id="@+id/plausible"
            android:key="plausible"
            android:enabled="true"
            android:summary="@string/plausible_summary"
            android:title="@string/plausible_title"
            android:clickable="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appConfig">

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="1.0.0" />

    </PreferenceCategory>

</PreferenceScreen>